--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -6,22 +6,22 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-09T13:39:19.020065Z",
-     "start_time": "2024-12-09T13:39:19.017447Z"
+     "end_time": "2024-12-12T15:33:32.694104Z",
+     "start_time": "2024-12-12T15:33:31.984399Z"
     }
    },
    "source": [
-    "import numpy as np\n",
-    "# import cupy as np"
+    "# import numpy as np\n",
+    "import cupy as np"
    ],
    "outputs": [],
-   "execution_count": 94
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T13:39:19.216054Z",
-     "start_time": "2024-12-09T13:39:19.029051Z"
+     "end_time": "2024-12-12T15:33:33.149297Z",
+     "start_time": "2024-12-12T15:33:32.698103Z"
     }
    },
    "cell_type": "code",
@@ -33,13 +33,13 @@
    ],
    "id": "3240ff354b7cc494",
    "outputs": [],
-   "execution_count": 95
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T13:39:19.339505Z",
-     "start_time": "2024-12-09T13:39:19.222975Z"
+     "end_time": "2024-12-12T15:33:33.747871Z",
+     "start_time": "2024-12-12T15:33:33.206830Z"
     }
    },
    "cell_type": "code",
@@ -63,13 +63,13 @@
      ]
     }
    ],
-   "execution_count": 96
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T13:39:19.350467Z",
-     "start_time": "2024-12-09T13:39:19.347904Z"
+     "end_time": "2024-12-12T15:33:33.823041Z",
+     "start_time": "2024-12-12T15:33:33.819603Z"
     }
    },
    "cell_type": "code",
@@ -80,13 +80,13 @@
    ],
    "id": "3c85797e84e9ea82",
    "outputs": [],
-   "execution_count": 97
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T13:39:19.363021Z",
-     "start_time": "2024-12-09T13:39:19.357083Z"
+     "end_time": "2024-12-12T15:33:33.841048Z",
+     "start_time": "2024-12-12T15:33:33.833720Z"
     }
    },
    "cell_type": "code",
@@ -122,17 +122,18 @@
     "    \n",
     "    def cross_entropy_loss(self,output, true):\n",
     "        delta = 1e-7\n",
+    "        output = np.clip(output, delta, 1 - delta)\n",
     "        return -np.sum(true * np.log(output), axis=1)"
    ],
    "id": "71ac489d32abd4bf",
    "outputs": [],
-   "execution_count": 98
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T13:39:19.374015Z",
-     "start_time": "2024-12-09T13:39:19.371020Z"
+     "end_time": "2024-12-12T15:33:33.852710Z",
+     "start_time": "2024-12-12T15:33:33.848726Z"
     }
    },
    "cell_type": "code",
@@ -150,43 +151,47 @@
    ],
    "id": "e23926a240b4f14a",
    "outputs": [],
-   "execution_count": 99
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T13:39:19.384139Z",
-     "start_time": "2024-12-09T13:39:19.381013Z"
+     "end_time": "2024-12-12T15:33:33.867367Z",
+     "start_time": "2024-12-12T15:33:33.862361Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def train_nn(nn, train_images, train_labels, epochs):\n",
     "    for epoch in range(epochs):\n",
+    "        loss=0\n",
     "        for image, label in zip(train_images, train_labels):\n",
     "            output = nn.forward(image)\n",
     "            nn.backward(image, label, output)\n",
-    "        print(f\"Epoch {epoch} complete\")\n",
-    "        evaluate_nn(nn, test_images[epoch*10:(epoch+1)*10], test_labels[epoch*10:(epoch+1)*10])"
+    "            loss+=nn.cross_entropy_loss(output, label)\n",
+    "        print(\"loss:\",loss/len(train_images))\n",
+    "        print(f\"Epoch {epoch} complete\")"
    ],
    "id": "6faaed7db1ef69fc",
    "outputs": [],
-   "execution_count": 100
+   "execution_count": 15
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-12-09T13:46:51.257932Z",
-     "start_time": "2024-12-09T13:39:19.392070Z"
+     "start_time": "2024-12-12T15:33:33.875668Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 创建神经网络实例\n",
     "input_size = 28 * 28\n",
-    "hidden_size = 64\n",
+    "hidden_size = 500\n",
     "output_size = 10\n",
-    "learning_rate=0.01\n",
+    "learning_rate=0.1\n",
     "nn = NeuralNetwork(input_size, hidden_size, output_size, learning_rate)\n",
     "\n",
     "# 训练神经网络\n",
@@ -206,7 +211,7 @@
       "Epoch 2 complete\n",
       "Accuracy: 100.0%\n",
       "Epoch 3 complete\n",
-      "Accuracy: 80.0%\n",
+      "Accuracy: 100.0%\n",
       "Epoch 4 complete\n",
       "Accuracy: 100.0%\n",
       "Epoch 5 complete\n",
@@ -222,198 +227,31 @@
       "Epoch 10 complete\n",
       "Accuracy: 100.0%\n",
       "Epoch 11 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 12 complete\n",
       "Accuracy: 90.0%\n",
+      "Epoch 12 complete\n",
+      "Accuracy: 100.0%\n",
       "Epoch 13 complete\n",
       "Accuracy: 100.0%\n",
       "Epoch 14 complete\n",
-      "Accuracy: 90.0%\n",
+      "Accuracy: 100.0%\n",
       "Epoch 15 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 16 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 17 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 18 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 19 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 20 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 21 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 22 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 23 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 24 complete\n",
-      "Accuracy: 80.0%\n",
-      "Epoch 25 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 26 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 27 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 28 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 29 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 30 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 31 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 32 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 33 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 34 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 35 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 36 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 37 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 38 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 39 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 40 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 41 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 42 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 43 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 44 complete\n",
-      "Accuracy: 80.0%\n",
-      "Epoch 45 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 46 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 47 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 48 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 49 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 50 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 51 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 52 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 53 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 54 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 55 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 56 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 57 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 58 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 59 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 60 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 61 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 62 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 63 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 64 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 65 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 66 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 67 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 68 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 69 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 70 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 71 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 72 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 73 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 74 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 75 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 76 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 77 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 78 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 79 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 80 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 81 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 82 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 83 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 84 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 85 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 86 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 87 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 88 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 89 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 90 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 91 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 92 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 93 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 94 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 95 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 96 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 97 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 98 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 99 complete\n",
       "Accuracy: 100.0%\n"
      ]
     }
    ],
-   "execution_count": 101
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T13:47:01.004098Z",
-     "start_time": "2024-12-09T13:47:00.860687Z"
+     "end_time": "2024-12-12T15:33:31.234615500Z",
+     "start_time": "2024-12-09T16:28:03.207391Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 评估神经网络\n",
+    "print(test_images.shape)\n",
     "evaluate_nn(nn, test_images, test_labels)\n",
     "\n"
    ],
@@ -423,24 +261,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 97.37%\n"
+      "Accuracy: 97.35000000000001%\n"
      ]
     }
    ],
-   "execution_count": 104
+   "execution_count": 52
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T13:46:51.438678Z",
-     "start_time": "2024-12-09T13:46:51.436108Z"
+     "end_time": "2024-12-12T15:33:31.235616100Z",
+     "start_time": "2024-12-09T16:27:58.150105Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "32cf80abc5ece7ae",
    "outputs": [],
-   "execution_count": 103
+   "execution_count": null
   }
  ],
  "metadata": {
