使用numpy而不是cupy

--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:15:19.438116Z",
-     "start_time": "2024-12-09T12:15:19.410586Z"
+     "end_time": "2024-12-12T18:07:14.314563Z",
+     "start_time": "2024-12-12T18:07:14.311411Z"
     }
    },
    "source": [
@@ -18,20 +18,20 @@
     "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:15:19.644492Z",
-     "start_time": "2024-12-09T12:15:19.442107Z"
+     "end_time": "2024-12-12T18:07:14.708625Z",
+     "start_time": "2024-12-12T18:07:14.323555Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 加载MNIST数据集\n",
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "\n",
+    "# print(x_train.shape)\n",
     "# 数据预处理\n",
     "x_train = x_train.reshape((x_train.shape[0], 28, 28, 1)).astype(\"float32\") / 255.0\n",
     "x_test = x_test.reshape((x_test.shape[0], 28, 28, 1)).astype(\"float32\") / 255.0\n",
@@ -42,13 +42,13 @@
    ],
    "id": "c3d4f489a325207f",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:15:19.916346Z",
-     "start_time": "2024-12-09T12:15:19.813133Z"
+     "end_time": "2024-12-12T18:07:14.754577Z",
+     "start_time": "2024-12-12T18:07:14.720044Z"
     }
    },
    "cell_type": "code",
@@ -67,13 +67,13 @@
    ],
    "id": "ad4f40d086c1a14d",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:15:19.937892Z",
-     "start_time": "2024-12-09T12:15:19.928378Z"
+     "end_time": "2024-12-12T18:07:14.771475Z",
+     "start_time": "2024-12-12T18:07:14.764571Z"
     }
    },
    "cell_type": "code",
@@ -85,13 +85,13 @@
    ],
    "id": "db46e320d9438ec1",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:15:51.012082Z",
-     "start_time": "2024-12-09T12:15:19.948047Z"
+     "end_time": "2024-12-12T18:07:47.204517Z",
+     "start_time": "2024-12-12T18:07:14.782651Z"
     }
    },
    "cell_type": "code",
@@ -106,25 +106,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "\u001B[1m844/844\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m7s\u001B[0m 7ms/step - accuracy: 0.8686 - loss: 0.4392 - val_accuracy: 0.9827 - val_loss: 0.0580\n",
+      "\u001B[1m844/844\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m7s\u001B[0m 7ms/step - accuracy: 0.8656 - loss: 0.4469 - val_accuracy: 0.9843 - val_loss: 0.0519\n",
       "Epoch 2/5\n",
-      "\u001B[1m844/844\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m6s\u001B[0m 7ms/step - accuracy: 0.9821 - loss: 0.0566 - val_accuracy: 0.9870 - val_loss: 0.0467\n",
+      "\u001B[1m844/844\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m6s\u001B[0m 7ms/step - accuracy: 0.9803 - loss: 0.0608 - val_accuracy: 0.9888 - val_loss: 0.0407\n",
       "Epoch 3/5\n",
-      "\u001B[1m844/844\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m6s\u001B[0m 7ms/step - accuracy: 0.9887 - loss: 0.0359 - val_accuracy: 0.9895 - val_loss: 0.0428\n",
+      "\u001B[1m844/844\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m6s\u001B[0m 7ms/step - accuracy: 0.9870 - loss: 0.0414 - val_accuracy: 0.9858 - val_loss: 0.0445\n",
       "Epoch 4/5\n",
-      "\u001B[1m844/844\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m6s\u001B[0m 7ms/step - accuracy: 0.9910 - loss: 0.0274 - val_accuracy: 0.9905 - val_loss: 0.0335\n",
+      "\u001B[1m844/844\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m6s\u001B[0m 7ms/step - accuracy: 0.9902 - loss: 0.0322 - val_accuracy: 0.9875 - val_loss: 0.0439\n",
       "Epoch 5/5\n",
-      "\u001B[1m844/844\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m6s\u001B[0m 7ms/step - accuracy: 0.9932 - loss: 0.0217 - val_accuracy: 0.9895 - val_loss: 0.0350\n"
+      "\u001B[1m844/844\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m7s\u001B[0m 8ms/step - accuracy: 0.9916 - loss: 0.0262 - val_accuracy: 0.9902 - val_loss: 0.0375\n"
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:15:51.710963Z",
-     "start_time": "2024-12-09T12:15:51.021739Z"
+     "end_time": "2024-12-12T18:07:48.020596Z",
+     "start_time": "2024-12-12T18:07:47.216135Z"
     }
    },
    "cell_type": "code",
@@ -140,18 +140,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1m313/313\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1s\u001B[0m 2ms/step - accuracy: 0.9870 - loss: 0.0399\n",
-      "Test accuracy: 0.9901999831199646\n"
+      "\u001B[1m313/313\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m1s\u001B[0m 2ms/step - accuracy: 0.9880 - loss: 0.0365\n",
+      "Test accuracy: 0.9904000163078308\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-09T12:15:52.077258Z",
-     "start_time": "2024-12-09T12:15:51.719970Z"
+     "end_time": "2024-12-12T18:07:48.325999Z",
+     "start_time": "2024-12-12T18:07:48.030647Z"
     }
    },
    "cell_type": "code",
@@ -178,7 +178,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 109ms/step\n"
+      "WARNING:tensorflow:5 out of the last 5 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x00000239FFD56DE0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 64ms/step\n"
      ]
     },
     {
@@ -192,7 +193,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 16
+   "execution_count": 36
   }
  ],
  "metadata": {
