--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -6,22 +6,22 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:33:32.694104Z",
-     "start_time": "2024-12-12T15:33:31.984399Z"
+     "end_time": "2024-12-15T15:44:37.808657Z",
+     "start_time": "2024-12-15T15:44:37.806362Z"
     }
    },
    "source": [
-    "# import numpy as np\n",
-    "import cupy as np"
+    "import numpy as np\n",
+    "# import cupy as np"
    ],
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:33:33.149297Z",
-     "start_time": "2024-12-12T15:33:32.698103Z"
+     "end_time": "2024-12-15T15:44:37.982738Z",
+     "start_time": "2024-12-15T15:44:37.812605Z"
     }
    },
    "cell_type": "code",
@@ -33,13 +33,13 @@
    ],
    "id": "3240ff354b7cc494",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:33:33.747871Z",
-     "start_time": "2024-12-12T15:33:33.206830Z"
+     "end_time": "2024-12-15T15:44:38.092154Z",
+     "start_time": "2024-12-15T15:44:37.990Z"
     }
    },
    "cell_type": "code",
@@ -63,13 +63,13 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:33:33.823041Z",
-     "start_time": "2024-12-12T15:33:33.819603Z"
+     "end_time": "2024-12-15T15:44:38.107394Z",
+     "start_time": "2024-12-15T15:44:38.104417Z"
     }
    },
    "cell_type": "code",
@@ -80,19 +80,19 @@
    ],
    "id": "3c85797e84e9ea82",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:33:33.841048Z",
-     "start_time": "2024-12-12T15:33:33.833720Z"
+     "end_time": "2024-12-15T15:44:38.121425Z",
+     "start_time": "2024-12-15T15:44:38.114002Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class NeuralNetwork:\n",
-    "    def __init__(self, input_size, hidden_size, output_size,learning_rate = 0.01):\n",
+    "    def __init__(self, input_size, hidden_size, output_size,learning_rate = 0.01,tol=1e-4):\n",
     "        self.weights1 = np.random.randn(input_size, hidden_size) * np.sqrt(1 / input_size)\n",
     "        self.weights2 = np.random.randn(hidden_size, output_size) * np.sqrt(1 / hidden_size)\n",
     "        self.bias1 = np.zeros((1, hidden_size))\n",
@@ -127,13 +127,13 @@
    ],
    "id": "71ac489d32abd4bf",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:33:33.852710Z",
-     "start_time": "2024-12-12T15:33:33.848726Z"
+     "end_time": "2024-12-15T15:44:38.132501Z",
+     "start_time": "2024-12-15T15:44:38.129353Z"
     }
    },
    "cell_type": "code",
@@ -151,18 +151,18 @@
    ],
    "id": "e23926a240b4f14a",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:33:33.867367Z",
-     "start_time": "2024-12-12T15:33:33.862361Z"
+     "end_time": "2024-12-15T15:44:38.144858Z",
+     "start_time": "2024-12-15T15:44:38.139858Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def train_nn(nn, train_images, train_labels, epochs):\n",
+    "def train_nn(nn, train_images, train_labels, epochs, tol=1e-4):\n",
     "    for epoch in range(epochs):\n",
     "        loss=0\n",
     "        for image, label in zip(train_images, train_labels):\n",
@@ -170,11 +170,13 @@
     "            nn.backward(image, label, output)\n",
     "            loss+=nn.cross_entropy_loss(output, label)\n",
     "        print(\"loss:\",loss/len(train_images))\n",
+    "        if loss<tol:\n",
+    "            break\n",
     "        print(f\"Epoch {epoch} complete\")"
    ],
    "id": "6faaed7db1ef69fc",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 44
   },
   {
    "metadata": {
@@ -182,70 +184,31 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2024-12-12T15:33:33.875668Z"
+     "start_time": "2024-12-15T15:44:38.151969Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 创建神经网络实例\n",
     "input_size = 28 * 28\n",
-    "hidden_size = 500\n",
+    "hidden_size = 256\n",
     "output_size = 10\n",
     "learning_rate=0.1\n",
     "nn = NeuralNetwork(input_size, hidden_size, output_size, learning_rate)\n",
     "\n",
     "# 训练神经网络\n",
-    "train_nn(nn, train_images, train_labels, epochs=100)\n",
+    "train_nn(nn, train_images, train_labels, epochs=100,tol=1e-2)\n",
     "\n"
    ],
    "id": "c4232dbe96310ed6",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 1 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 2 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 3 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 4 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 5 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 6 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 7 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 8 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 9 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 10 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 11 complete\n",
-      "Accuracy: 90.0%\n",
-      "Epoch 12 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 13 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 14 complete\n",
-      "Accuracy: 100.0%\n",
-      "Epoch 15 complete\n",
-      "Accuracy: 100.0%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:33:31.234615500Z",
-     "start_time": "2024-12-09T16:28:03.207391Z"
+     "end_time": "2024-12-15T15:44:36.439076Z",
+     "start_time": "2024-12-15T15:44:01.356634Z"
     }
    },
    "cell_type": "code",
@@ -261,17 +224,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 97.35000000000001%\n"
+      "(10000, 784)\n",
+      "Accuracy: 96.92%\n"
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T15:33:31.235616100Z",
-     "start_time": "2024-12-09T16:27:58.150105Z"
+     "end_time": "2024-12-15T15:44:36.439076Z",
+     "start_time": "2024-12-15T15:43:13.407203Z"
     }
    },
    "cell_type": "code",
