整理项目文件

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-15T15:44:37.808657Z",
-     "start_time": "2024-12-15T15:44:37.806362Z"
+     "end_time": "2024-12-15T16:26:21.895549Z",
+     "start_time": "2024-12-15T16:26:21.891739Z"
     }
    },
    "source": [
@@ -15,13 +15,13 @@
     "# import cupy as np"
    ],
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 54
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T15:44:37.982738Z",
-     "start_time": "2024-12-15T15:44:37.812605Z"
+     "end_time": "2024-12-15T16:26:22.080329Z",
+     "start_time": "2024-12-15T16:26:21.904545Z"
     }
    },
    "cell_type": "code",
@@ -33,13 +33,13 @@
    ],
    "id": "3240ff354b7cc494",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 55
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T15:44:38.092154Z",
-     "start_time": "2024-12-15T15:44:37.990Z"
+     "end_time": "2024-12-15T16:26:22.198405Z",
+     "start_time": "2024-12-15T16:26:22.088355Z"
     }
    },
    "cell_type": "code",
@@ -63,13 +63,13 @@
      ]
     }
    ],
-   "execution_count": 40
+   "execution_count": 56
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T15:44:38.107394Z",
-     "start_time": "2024-12-15T15:44:38.104417Z"
+     "end_time": "2024-12-15T16:26:22.208083Z",
+     "start_time": "2024-12-15T16:26:22.205836Z"
     }
    },
    "cell_type": "code",
@@ -80,13 +80,13 @@
    ],
    "id": "3c85797e84e9ea82",
    "outputs": [],
-   "execution_count": 41
+   "execution_count": 57
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T15:44:38.121425Z",
-     "start_time": "2024-12-15T15:44:38.114002Z"
+     "end_time": "2024-12-15T16:26:22.233105Z",
+     "start_time": "2024-12-15T16:26:22.226682Z"
     }
    },
    "cell_type": "code",
@@ -127,13 +127,13 @@
    ],
    "id": "71ac489d32abd4bf",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 58
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T15:44:38.132501Z",
-     "start_time": "2024-12-15T15:44:38.129353Z"
+     "end_time": "2024-12-15T16:26:22.255923Z",
+     "start_time": "2024-12-15T16:26:22.252580Z"
     }
    },
    "cell_type": "code",
@@ -151,13 +151,13 @@
    ],
    "id": "e23926a240b4f14a",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 59
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T15:44:38.144858Z",
-     "start_time": "2024-12-15T15:44:38.139858Z"
+     "end_time": "2024-12-15T16:26:22.266868Z",
+     "start_time": "2024-12-15T16:26:22.263932Z"
     }
    },
    "cell_type": "code",
@@ -176,15 +176,13 @@
    ],
    "id": "6faaed7db1ef69fc",
    "outputs": [],
-   "execution_count": 44
+   "execution_count": 60
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2024-12-15T15:44:38.151969Z"
+     "end_time": "2024-12-15T16:56:57.508768Z",
+     "start_time": "2024-12-15T16:26:22.274809Z"
     }
    },
    "cell_type": "code",
@@ -197,18 +195,85 @@
     "nn = NeuralNetwork(input_size, hidden_size, output_size, learning_rate)\n",
     "\n",
     "# 训练神经网络\n",
-    "train_nn(nn, train_images, train_labels, epochs=100,tol=1e-2)\n",
+    "train_nn(nn, train_images, train_labels, epochs=30,tol=1e-2)\n",
     "\n"
    ],
    "id": "c4232dbe96310ed6",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: [0.46027282]\n",
+      "Epoch 0 complete\n",
+      "loss: [0.25038963]\n",
+      "Epoch 1 complete\n",
+      "loss: [0.1845351]\n",
+      "Epoch 2 complete\n",
+      "loss: [0.14919026]\n",
+      "Epoch 3 complete\n",
+      "loss: [0.12685825]\n",
+      "Epoch 4 complete\n",
+      "loss: [0.11094771]\n",
+      "Epoch 5 complete\n",
+      "loss: [0.09942635]\n",
+      "Epoch 6 complete\n",
+      "loss: [0.09055988]\n",
+      "Epoch 7 complete\n",
+      "loss: [0.08336536]\n",
+      "Epoch 8 complete\n",
+      "loss: [0.07725929]\n",
+      "Epoch 9 complete\n",
+      "loss: [0.0719885]\n",
+      "Epoch 10 complete\n",
+      "loss: [0.06741108]\n",
+      "Epoch 11 complete\n",
+      "loss: [0.06335306]\n",
+      "Epoch 12 complete\n",
+      "loss: [0.05974239]\n",
+      "Epoch 13 complete\n",
+      "loss: [0.0565942]\n",
+      "Epoch 14 complete\n",
+      "loss: [0.05381657]\n",
+      "Epoch 15 complete\n",
+      "loss: [0.05141009]\n",
+      "Epoch 16 complete\n",
+      "loss: [0.04927341]\n",
+      "Epoch 17 complete\n",
+      "loss: [0.04730108]\n",
+      "Epoch 18 complete\n",
+      "loss: [0.04546663]\n",
+      "Epoch 19 complete\n",
+      "loss: [0.04381111]\n",
+      "Epoch 20 complete\n",
+      "loss: [0.04225068]\n",
+      "Epoch 21 complete\n",
+      "loss: [0.04088907]\n",
+      "Epoch 22 complete\n",
+      "loss: [0.0397568]\n",
+      "Epoch 23 complete\n",
+      "loss: [0.03867453]\n",
+      "Epoch 24 complete\n",
+      "loss: [0.03765547]\n",
+      "Epoch 25 complete\n",
+      "loss: [0.03673296]\n",
+      "Epoch 26 complete\n",
+      "loss: [0.03587346]\n",
+      "Epoch 27 complete\n",
+      "loss: [0.03509277]\n",
+      "Epoch 28 complete\n",
+      "loss: [0.03439018]\n",
+      "Epoch 29 complete\n"
+     ]
+    }
+   ],
+   "execution_count": 61
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T15:44:36.439076Z",
-     "start_time": "2024-12-15T15:44:01.356634Z"
+     "end_time": "2024-12-15T16:56:57.941668Z",
+     "start_time": "2024-12-15T16:56:57.519842Z"
     }
    },
    "cell_type": "code",
@@ -225,17 +290,17 @@
      "output_type": "stream",
      "text": [
       "(10000, 784)\n",
-      "Accuracy: 96.92%\n"
+      "Accuracy: 98.18%\n"
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 62
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T15:44:36.439076Z",
-     "start_time": "2024-12-15T15:43:13.407203Z"
+     "end_time": "2024-12-15T16:56:57.965558Z",
+     "start_time": "2024-12-15T16:56:57.963468Z"
     }
    },
    "cell_type": "code",
